#1168: Converted GetSecurityRoleGroupsCommand to extend BasePaginatedMultipleEntitiesCommand