@@ -28,33 +28,31 @@ import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class GetSecurityRoleGroupsCommand
-        extends BaseMultipleEntitiesCommand<SecurityRoleGroup, GetSecurityRoleGroupsForm> {
+        extends BasePaginatedMultipleEntitiesCommand<SecurityRoleGroup, GetSecurityRoleGroupsForm> {
 
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.SecurityRoleGroup.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("ParentSecurityRoleGroupName", FieldType.ENTITY_NAME, false, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetSecurityRoleGroupsCommand */
@@ -65,18 +63,36 @@ public class GetSecurityRoleGroupsCommand
     SecurityRoleGroup parentSecurityRoleGroup;
 
     @Override
-    protected Collection<SecurityRoleGroup> getEntities() {
+    protected void handleForm() {
         var securityControl = Session.getModelController(SecurityControl.class);
         var parentSecurityRoleGroupName = form.getParentSecurityRoleGroupName();
-        Collection<SecurityRoleGroup> entities = null;
 
         parentSecurityRoleGroup = parentSecurityRoleGroupName == null ? null : securityControl.getSecurityRoleGroupByName(parentSecurityRoleGroupName);
 
-        if(parentSecurityRoleGroupName == null || parentSecurityRoleGroup != null) {
-            entities = parentSecurityRoleGroup == null? securityControl.getSecurityRoleGroups():
-                    securityControl.getSecurityRoleGroupsByParentSecurityRoleGroup(parentSecurityRoleGroup);
-        } else {
+        if(parentSecurityRoleGroupName != null && parentSecurityRoleGroup == null) {
             addExecutionError(ExecutionErrors.UnknownParentSecurityRoleGroupName.name(), parentSecurityRoleGroupName);
+        }
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        var securityControl = Session.getModelController(SecurityControl.class);
+
+        return hasExecutionErrors() ? null :
+                parentSecurityRoleGroup == null ?
+                        securityControl.countSecurityRoleGroups() :
+                        securityControl.countSecurityRoleGroupsByParentSecurityRoleGroup(parentSecurityRoleGroup);
+    }
+
+    @Override
+    protected Collection<SecurityRoleGroup> getEntities() {
+        var securityControl = Session.getModelController(SecurityControl.class);
+        Collection<SecurityRoleGroup> entities = null;
+
+        if(!hasExecutionErrors()) {
+            entities = parentSecurityRoleGroup == null ?
+                    securityControl.getSecurityRoleGroups():
+                    securityControl.getSecurityRoleGroupsByParentSecurityRoleGroup(parentSecurityRoleGroup);
         }
 
         return entities;
